Sat Feb  8 10:11:21 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c (glob_helper): Dir.glob('**/') did not work. [ruby-dev:22832]

Sat Feb  8 00:29:26 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c (fnmatch):
	  File.fnmatch('*?', 'a') should return true. [ruby-dev:22815]
	  File.fnmatch('\[1\]' , '[1]') should return true. [ruby-dev:22819]

	* dir.c
	  Did some styles (no change to behavior)

Sat Feb  7 19:56:11 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/irb/init.rb (IRB.rc_files): yield possible rc file names.

	* lib/irb/input-method.rb (IRB::ReadlineInputMethod::initialize):
	  load and save history automatically.  [ruby-core:02352]

Fri Feb  6 22:48:16 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/html_generator.rb (gen_url): Support
	  https in RDoc hyperlinks

Fri Feb  6 22:41:22 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/pp.rb (PPInspectTest#test_to_s_with_iv): rollback the previous
	  commit.  [ruby-dev:22813]

Fri Feb  6 22:22:50 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/pp.rb (PPInspectTest#test_to_s_with_iv): remove instance
	  variable which is defined in the test.

Fri Feb  6 18:54:18 2004  akira yamada  <akira@ruby-lang.org>

	* test/ruby/test_proc.rb (TestProc::test_eq): added a
	  test.  [ruby-dev:22599]

Fri Feb  6 18:26:00 2004  akira yamada  <akira@ruby-lang.org>

	* test/ruby/test_proc.rb (TestProc::test_eq): added tests for
	  Proc#==.  [ruby-dev:22592], [ruby-dev:22601]

Fri Feb  6 10:12:06 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/socket.c (bsock_do_not_reverse_lookup): control reverse
	  lookup for every instance.  [ruby-core:02346]

Fri Feb  6 09:15:11 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/irb/extend-command.rb: add irb_help command.  [ruby-talk:91610]

	* lib/irb/cmd/help.rb (IRB::ExtendCommand::Help): show RDoc.

Fri Feb  6 00:48:37 2004  Tanaka Akira  <akr@m17n.org>

	* lib/prettyprint.rb (PrettyPrint#first?): obsoleted.
